Fixes after testing with Swagger Editor.
